--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Khazar Ahmadi"
   pronouns         : "she/her"  
   bio              : "I am neuroscientist"
-  location         : "Bochum & Frankfurt am Main, Germany"
+  location         : "Bochum & Frankfurt, Germany"
   employer         : "Ruhr University of Bochum"
   uri              : # URL
   email            : "khazar.ahmadi@rub.de" 
@@ -43,12 +43,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "khazarAhmadi"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
