--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "khazarAhmadi/khazarAhmadi.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "odayba.jpg"
   name             : "Khazar Ahmadi"
   pronouns         : "she/her"  
   bio              : "I am neuroscientist"
