--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://de.linkedin.com/in/khazar-ahmadi-99442440"# Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
