--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "I am neuroscientist"
   location         : "Bochum & Frankfurt, Germany"
   employer         : "Ruhr University of Bochum"
-  uri              : # URL
+  URI              : "https://www.ruhr-uni-bochum.de/neuropsy/mitarbeiterE.html"# URL
   email            : "khazar.ahmadi@rub.de" 
 
   # Academic websites
