--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "odayba.jpg"
   name             : "Khazar Ahmadi"
   pronouns         : "she/her"  
-  bio              : "I am neuroscientist"
+  bio              : "Neuroimaging enthusiast"
   location         : "Bochum & Frankfurt, Germany"
   employer         : "Ruhr University of Bochum"
   URI              : "https://www.ruhr-uni-bochum.de/neuropsy/mitarbeiterE.html"# URL
