--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "she/her"  
   bio              : "Neuroimaging enthusiast"
   location         : "Bochum & Frankfurt, Germany"
-  employer         : "Ruhr University of Bochum"
+  employer         : "Ruhr University Bochum"
   URI              : "https://www.ruhr-uni-bochum.de/neuropsy/mitarbeiterE.html"# URL
   email            : "khazar.ahmadi@rub.de" 
 
